<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueCatSalud"
    tools:context=".view.SignUpActivity"
    android:layout_gravity="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkblue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpToolbar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/signUpEmailText"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

    <EditText
        android:id="@+id/signUpNameText"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailText" />

    <EditText
        android:id="@+id/signUplastNameText"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpNameText" />

    <EditText
        android:id="@+id/signUpPasswordText"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUplastNameText" />

    <EditText
        android:id="@+id/signUpConfirmPasswordText"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordText" />

    <EditText
        android:id="@+id/imageLinkSignUp"
        android:layout_width="323dp"
        android:layout_height="42dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/image_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPasswordText" />

    <ProgressBar
        android:id="@+id/pb_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageLinkSignUp"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="323dp"
        android:layout_height="64dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="@color/darkblue"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>